--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 </head>
 <body style="background: lightgrey">
   <!--<div id="container" style="width:500px;height:300px;border:1px solid #ccc"></div>-->
+  <div id="toolbar" style="height: 25px;border:1px solid red">
+  </div>
   <div id="content" style="height: 100%">
   </div>
 </body>
