--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <script src="vendor/jqwidgets/jqx-all.js"></script>
 
 </head>
-<body style="background: lightgrey">
+<body style="background: lightgrey;margin: 0px">
   <!--<div id="container" style="width:500px;height:300px;border:1px solid #ccc"></div>-->
-  <div id="toolbar" style="height: 25px;border:1px solid red">
+  <div id="toolbar" style="height: 30px;border:0px solid red">
   </div>
   <div id="content" style="height: 100%">
   </div>
