--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <script src="vendor/jqwidgets/jqx-all.js"></script>
 
 </head>
-<body style="background: lightgrey;margin: 0px">
+<body style="background: rgba(211, 211, 211, 0.35);margin: 0px">
   <!--<div id="container" style="width:500px;height:300px;border:1px solid #ccc"></div>-->
   <div id="toolbar" style="height: 30px;border:0px solid red">
   </div>
