--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html style="height:100%;min-height: 100%;">
+<head >
     <meta charset="UTF-8">
     <title>E</title>
     <!--<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">-->
@@ -75,11 +75,15 @@
     <script src="vendor/jqwidgets/jqx-all.js"></script>
 
 </head>
-<body style="background: rgba(211, 211, 211, 0.35);margin: 0px">
+<body style=" display: flex; flex-direction: column; min-height: 100%; background: rgba(211, 211, 211, 0.35);margin: 0px">
   <!--<div id="container" style="width:500px;height:300px;border:1px solid #ccc"></div>-->
-  <div id="toolbar" style="height: 30px;border:0px solid red">
+  <div id="toolbar" style="flex:0 1 auto; height: 30px;border:0px solid red">
   </div>
-  <div id="content" style="height: 100%">
+  <div id="content" style="height: 100%; flex:1 0 auto">
+  </div>
+  <div id="taskbar" style="flex1:0 1 auto; ">
+  </div>
+  <div id="statusbar" style="flex1:0 1 auto; ">
   </div>
 </body>
 
